fixed word spacing, added margin top to footer

--- a/js/style.scss
+++ b/js/style.scss
@@ -274,6 +274,7 @@ input[type=text]:focus {
     width: 100%;
     height: 50px;
     padding: 5px;
+    margin-top: 15px;
     text-align: center;
     border-top: 1px solid rgb(1, 210, 119);
     font-family: 'Open Sans Condensed', sans-serif;
